updated sparc logo, sparc search, and registration form error message

--- a/user-panel/src/assets/demo/demo.css
+++ b/user-panel/src/assets/demo/demo.css
@@ -499,6 +499,12 @@
   padding-bottom: 0;
 }
 
+
+@keyframes blink {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
+
 @media screen and (max-width: 991px) {
   .section-navbars .navbar-collapse {
     display: none !important;
