--- a/user-panel/src/assets/scss/now-ui-kit/_inputs.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_inputs.scss
@@ -3,7 +3,8 @@
 .form-control {
     background-color: $transparent-bg;
     border: 1px solid $light-gray;
-    border-radius: $btn-round-radius;
+    // border-radius: $btn-round-radius;
+    border-radius: 5px;
     color: $black-color;
     line-height: normal;
     font-size: $font-size-small;
