--- a/user-panel/src/assets/scss/now-ui-kit/_typography.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_typography.scss
@@ -27,7 +27,7 @@ h1, .h1 {
 
     small{
         font-weight: $font-weight-bold;
-        text-transform: uppercase;
+        // text-transform: uppercase;
         opacity: .8;
     }
 }
@@ -63,7 +63,7 @@ h5, .h5 {
 h6, .h6{
     font-size: $font-size-h6;
     font-weight: $font-weight-bold;
-    text-transform: uppercase;
+    // text-transform: uppercase;
 }
 p{
     line-height: 1.61em;
@@ -77,7 +77,7 @@ p{
 
 
     &.title-up{
-        text-transform: uppercase;
+        // text-transform: uppercase;
 
         a{
             color: $black-color;
@@ -96,7 +96,7 @@ p{
     font-weight: $font-weight-light;
 }
 .category{
-    text-transform: capitalize;
+    // text-transform: capitalize;
     font-weight: $font-weight-bold;
     color: $dark-gray;
 }
@@ -129,7 +129,7 @@ p{
     small{
         color: $default-color;
         font-size: $font-size-small;
-        text-transform: uppercase;
+        // text-transform: uppercase;
     }
 
     &.blockquote-primary{
