fixed dropdown menu

--- a/user-panel/src/assets/scss/now-ui-kit/_navbar.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_navbar.scss
@@ -111,6 +111,8 @@
         padding-top: $padding-base-vertical;
         padding-bottom: $padding-base-vertical;
         line-height: $line-height-nav-link;
+        text-align: center;
+        width: 100%;
     }
 
     .navbar-toggler{
