uncapitalized all words

--- a/user-panel/src/assets/scss/now-ui-kit/_dropdown.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_dropdown.scss
@@ -78,7 +78,7 @@
     .dropdown-header:not([href]):not([tabindex]){
         color: $default-color-opacity;
         font-size: $font-size-mini;
-        text-transform: uppercase;
+        // text-transform: uppercase;
         font-weight: $font-weight-bold;
     }
 
