--- a/user-panel/src/assets/scss/now-ui-kit/_navbar.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_navbar.scss
@@ -44,7 +44,7 @@
         }
 
         .nav-link:not(.btn){
-            text-transform: uppercase;
+            // text-transform: uppercase;
             font-size: $font-size-mini;
             font-size: 14px;
             padding: $padding-base-vertical $padding-base-horizontal;
@@ -106,7 +106,7 @@
     }
 
     .navbar-brand{
-        text-transform: uppercase;
+        // text-transform: uppercase;
         font-size: $font-size-small;
         padding-top: $padding-base-vertical;
         padding-bottom: $padding-base-vertical;
