--- a/user-panel/src/assets/scss/now-ui-kit/_pagination.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_pagination.scss
@@ -14,7 +14,7 @@
         color: $black-color;
         cursor: pointer;
         font-size: $font-size-base;
-        text-transform: uppercase;
+        // text-transform: uppercase;
         background: transparent;
 
         &:hover,
