--- a/user-panel/src/assets/scss/now-ui-kit/_alerts.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_alerts.scss
@@ -39,7 +39,7 @@
     }
 
     strong{
-        text-transform: uppercase;
+        // text-transform: uppercase;
         font-size: 12px;
     }
 
