--- a/user-panel/src/assets/scss/now-ui-kit/_inputs.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_inputs.scss
@@ -1,5 +1,9 @@
 @include form-control-placeholder($default-color, .8);
 
+#login_input {
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
 .form-control {
     background-color: $transparent-bg;
     border: 1px solid $light-gray;
