fixed navigation css

--- a/user-panel/src/assets/scss/now-ui-kit/_pills.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_pills.scss
@@ -19,7 +19,7 @@
 
     &:not(.flex-column) .nav-item {
         &:not(:last-child) .nav-link{
-            margin-right: 19px;
+            // margin-right: 19px;
         }
     }
 
