--- a/user-panel/src/assets/scss/now-ui-kit/_dropdown.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_dropdown.scss
@@ -42,6 +42,7 @@
       &.active {
         background-color: $primary-color;
         color: white;
+        margin-right: 0px;
       }
 
       &.disabled,
@@ -110,6 +111,7 @@
         padding-top: $padding-base-vertical;
         padding-bottom: $padding-base-vertical;
         display: block;
+        width: 100%;
 
         &:after{
             display: none;
