--- a/user-panel/src/assets/scss/now-ui-kit/_navbar.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_navbar.scss
@@ -26,7 +26,7 @@
             position: absolute;
             left: 0;
             right: 0;
-            margin: 0 auto;
+            margin: 0;
             width: 49px;
             top: -4px;
         }
@@ -87,6 +87,7 @@
         .nav-item .nav-link:not(.btn):hover,
         .nav-item .nav-link:not(.btn):active{
             background-color: $opacity-2;
+            // background-color: white;
             border-radius: $border-radius-small;
         }
         .nav-item .nav-link:not(.btn):hover {
@@ -100,7 +101,7 @@
         width: 27px;
         height: 27px;
         overflow: hidden;
-        margin: 0 auto;
+        margin: 0;
         border-radius: 50%;
         border: 1px solid transparent;
     }
@@ -120,16 +121,28 @@
         height: 27px;
         outline: 0;
         cursor: pointer;
+        // margin-left: -4px;
+        // text-align: center;
 
         &.navbar-toggler-left{
             position: relative;
             left: 0;
             padding-left: 0;
+            margin-left: -4px;
         }
 
         .navbar-toggler-bar.middle-bar{
           width: 17px;
           transition: width .2s linear;
+          margin-left: -5px;
+        }
+        .navbar-toggler-bar.top-bar{
+
+          margin-left: -5px;
+        }
+        .navbar-toggler-bar.bottom-bar{
+
+          margin-left: -5px;
         }
 
         &:hover{
@@ -142,6 +155,7 @@
     .button-dropdown{
         .navbar-toggler-bar:nth-child(2){
             width: 17px;
+            margin-left: -4px;
         }
     }
 
@@ -164,6 +178,7 @@
 
         .button-bar{
             background: $default-color;
+            margin-left: -4px;
         }
 
         .nav-item.active .nav-link:not(.btn),
