--- a/user-panel/src/assets/scss/now-ui-kit/_tabs.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_tabs.scss
@@ -17,13 +17,14 @@
         > .nav-link{
             color: $default-color;
             margin: 0;
-            margin-right: 5px;
+            // margin-right: 5px;
             background-color: $transparent-bg;
             border: 1px solid $transparent-bg;
             border-radius: 30px;
             font-size: $font-size-base;
             padding: $padding-btn-vertical $padding-round-horizontal;
             line-height: $line-height-general;
+            width: 100%;
 
             &:hover {
                 background-color: $transparent-bg;
