--- a/user-panel/src/assets/scss/now-ui-kit/mixins/_buttons.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/mixins/_buttons.scss
@@ -152,6 +152,7 @@
             background-color: $transparent-bg;
             color: $btn-states-color;
             border-color: $btn-states-color;
+            // width: 100%;
             box-shadow: none;
         }
     }
