changed engagement details page and contact us page

--- a/user-panel/src/assets/scss/now-ui-kit/_inputs.scss
+++ b/user-panel/src/assets/scss/now-ui-kit/_inputs.scss
@@ -4,6 +4,13 @@
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
 }
+
+#login_input2 {
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  border-color: black;
+}
+
 .form-control {
     background-color: $transparent-bg;
     border: 1px solid $light-gray;
